tests/ui/short_docbox/duplicate_fields.rs
use doc_item::short_docbox;

#[short_docbox(content="content 1", content="content 2")]
fn duplicate_fields() {}

fn main() {}
